fix: now mobile menu will scroll when overflowing

--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -101,11 +101,13 @@
     right: 0;
     z-index: 2;
     min-width: 320px;
+    height: 100%;
     padding-top: 100px;
     grid-row: 1;
     grid-column: 1 / -1;
     align-self: start;
     background-color: var(--bg-nav-mobile);
+    overflow-y: auto;
 
     &--closed {
       display: none;
