--- a/source/sass/blocks/menu-control.scss
+++ b/source/sass/blocks/menu-control.scss
@@ -13,7 +13,7 @@
   border: 0;
 
   &--close {
-    background-color: transparent;
+    background-color: var(--bg-nav-mobile);
   }
 
   @media (max-width: 1023px) {
